frontend/tests/errors/ER-021/per_element_array_broadcast_shape_mismatch/test.vx
// @rfc: docs/vexel-rfc.md#operators--precedence
// @desc: Dotted per-element array operators reject non-broadcast-compatible shapes. | Per-element array operators reject incompatible shapes

&^main() -> #i32 {
  a:#i32[2] = [1, 2];
  b:#i32[3] = [3, 4, 5];
  c:#i32[2] = a .+ b;
  0
}
